WindowImpl.doPointerEvent(..) Simplify pointer name->ID mapping, fix DEBUG.